tests/gateway-api-migration/fixtures/eye-of-horus-sample/input/common.ingress/base/app.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    networking.gke.io/managed-certificates: base-argocd-ingress-nginx-crt, base-grafana-ingress-nginx-crt, base-airflow-ingress-nginx-crt
    cert-manager.io/cluster-issuer: clouddns-dns01-clusterissuer
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress/mergeable-ingress-type: "master"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
    # nginx.org/proxy-connect-timeout: "300s"    #<=== default 60s
    # nginx.org/proxy-read-timeout: "300s"       #<=== default 60s
    # nginx.org/proxy-send-timeout: "300s"       #<=== default 60s
spec:
  rules:
    - host: base-argocd.example.com
    - host: base-grafana.example.com
    - host: base-airflow.example.com
  tls:
    - hosts:
        - base-argocd.example.com
      secretName: argocd-ingress-nginx-crt
    - hosts:
        - base-grafana.example.com
      secretName: grafana-ingress-nginx-crt
    - hosts:
        - base-airflow.example.com
      secretName: airflow-ingress-nginx-crt
